--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "less-loader": "^4.1.0",
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.12",
-    "webpack-dev-server": "^3.1.1"
+    "webpack-dev-server": "^3.1.1",
+    "workbox-webpack-plugin": "^3.0.1"
   },
   "dependencies": {
     "react": "^16.2.0",
