--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "less": "^3.0.1",
     "less-loader": "^4.1.0",
+    "style-loader": "^0.20.3",
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.12",
     "webpack-dev-server": "^3.1.1",
